# bhn-credits-generator

./: README.md  package.json  shell.nix
src/: App.vue  Generator.vue  Patreon.vue  TemplateBuilder.vue  faker.js  patreon_api.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/: TemplateBuilder.vue  default_template.txt
